# rusty-img-hosting

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  config.toml  config.toml.example  nginx.conf  start.sh
src/: main.rs
src/db/: db.rs  mod.rs  models.rs
src/public/: app.js
src/telegram/: api.rs  mod.rs
